[gd_scene load_steps=24 format=3 uid="uid://dh5prvbbds41m"]

[ext_resource type="Script" uid="uid://dk1nt2makb1qc" path="res://Scripts/Enemies/snow_mole_with_mounds.gd" id="1_mqewi"]
[ext_resource type="Texture2D" uid="uid://45lr6j8wllu3" path="res://Assets/Enemies/SnowMole/snow_mole_FALLING.png" id="2_6se63"]
[ext_resource type="Texture2D" uid="uid://by26dvwv1o5ap" path="res://Assets/Enemies/SnowMole/snow_mole_GO_UNDER.png" id="3_b4bua"]
[ext_resource type="Texture2D" uid="uid://l4p5ppxydpy1" path="res://Assets/Enemies/SnowMole/snow_mole_IDLE.png" id="3_b7pp8"]
[ext_resource type="Texture2D" uid="uid://cwhroo3vk3dn1" path="res://Assets/Enemies/SnowMole/snow_mole_JUMPING.png" id="4_5ccry"]
[ext_resource type="Texture2D" uid="uid://c5geyp8k0j21u" path="res://Assets/Enemies/SnowMole/mound.png" id="4_b4bua"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_35smd"]
radius = 3.09564
height = 12.8891

[sub_resource type="AtlasTexture" id="AtlasTexture_6gv7s"]
atlas = ExtResource("2_6se63")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfisl"]
atlas = ExtResource("2_6se63")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vix8q"]
atlas = ExtResource("2_6se63")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg24s"]
atlas = ExtResource("2_6se63")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7pp8"]
atlas = ExtResource("3_b4bua")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4bua"]
atlas = ExtResource("3_b4bua")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twuqv"]
atlas = ExtResource("3_b4bua")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixa6a"]
atlas = ExtResource("3_b7pp8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31sp1"]
atlas = ExtResource("3_b7pp8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1mgr"]
atlas = ExtResource("3_b7pp8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtnql"]
atlas = ExtResource("3_b7pp8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_act5u"]
atlas = ExtResource("3_b7pp8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hn6h7"]
atlas = ExtResource("3_b7pp8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukhls"]
atlas = ExtResource("4_5ccry")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hjssi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gv7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfisl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vix8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg24s")
}],
"loop": false,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7pp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4bua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4bua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twuqv")
}],
"loop": false,
"name": &"go_under",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixa6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31sp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1mgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtnql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_act5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn6h7")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukhls")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_b7pp8"]
colors = PackedColorArray(0.796078, 0.858824, 0.988235, 1, 1, 1, 1, 1)

[node name="SnowMole_with_Mounds2" type="Node2D" node_paths=PackedStringArray("snow_mole_anim_sprite", "snow_mole", "SNOWMOUNDS", "raycast_right", "raycast_left", "go_underground_timer", "travel_timer", "jumping_cooldown", "snow_puff_particles")]
script = ExtResource("1_mqewi")
snow_mole_anim_sprite = NodePath("SnowMole/AnimatedSprite2D")
snow_mole = NodePath("SnowMole")
SNOWMOUNDS = [NodePath("Mounds/Mound1"), NodePath("Mounds/Mound2")]
raycast_right = NodePath("SnowMole/raycast_right")
raycast_left = NodePath("SnowMole/raycast_left")
go_underground_timer = NodePath("go_underground_timer")
travel_timer = NodePath("travel_timer")
jumping_cooldown = NodePath("jumping_cooldown")
snow_puff_particles = NodePath("snow_puff")

[node name="SnowMole" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnowMole"]
shape = SubResource("CapsuleShape2D_35smd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SnowMole"]
z_index = -1
sprite_frames = SubResource("SpriteFrames_hjssi")
animation = &"jump"
autoplay = "idle"
offset = Vector2(0, 3)

[node name="raycast_right" type="RayCast2D" parent="SnowMole"]
target_position = Vector2(72, 0)
collision_mask = 2

[node name="raycast_left" type="RayCast2D" parent="SnowMole"]
target_position = Vector2(-72, 0)
collision_mask = 2

[node name="Control" type="Control" parent="SnowMole"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="debug_state" type="Label" parent="SnowMole/Control"]
layout_mode = 0
offset_left = -29.0
offset_top = -16.0
offset_right = 104.0
offset_bottom = 7.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "snow_mole_state"

[node name="Mounds" type="Node2D" parent="."]

[node name="Mound1" type="Sprite2D" parent="Mounds"]
position = Vector2(-40, 0)
texture = ExtResource("4_b4bua")

[node name="Mound2" type="Sprite2D" parent="Mounds"]
position = Vector2(40, 0)
texture = ExtResource("4_b4bua")

[node name="go_underground_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="travel_timer" type="Timer" parent="."]
one_shot = true

[node name="jumping_cooldown" type="Timer" parent="."]
one_shot = true

[node name="snow_puff" type="CPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 15
lifetime = 0.2
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2(0, -1)
gravity = Vector2(0, 900)
initial_velocity_min = 60.0
initial_velocity_max = 150.0
angle_min = -42.0
angle_max = 48.0
scale_amount_max = 4.0
color = Color(0.796078, 0.858824, 0.988235, 1)
color_ramp = SubResource("Gradient_b7pp8")

[connection signal="animation_finished" from="SnowMole/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="go_underground_timer" to="." method="_on_go_underground_timer_timeout"]
[connection signal="timeout" from="travel_timer" to="." method="_on_travel_timer_timeout"]
